Adding steps to the guide.

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -2,27 +2,214 @@
 title: Onboarding New Employees
 description: How to onboard new employees using the Veeva Vault API.
 ---
-
 import { Step, Steps } from 'fumadocs-ui/components/steps';
- 
+
+The Onboarding API in Veeva Vault provides a mechanism to track which employees have completed training or other HR tasks in systems outside Vault. With the Onboarding API, Vault customers that handle their HR and onboarding through other systems can create an integration that watches for those tasks to be completed and can update the employee's vault object to indicate that they have been onboarded.
+
+This guide will walk you through using the Onboarding API in Veeva Vault. In order to follow this guide, you need to have the following items set up:
+
+1. Using version 24.3+ of the Vault API.
+1. Have `employee__c` and `address__c` objects defined in your Vault instance.
+1. Have a basic understanding of [Vault Objects](https://platform.veevavault.help/en/lr/15298/).
+1. Have a username, password, and Vault DNS.
+
+### Example Data
+This guide will make use of example data provided through the following .csv files.
+- [Employees.csv]()
+- [Addresses.csv]()
+
 <Steps>
-<Step>
+<Step> 
  
-### Authenticate
-Use the `/auth` endpoint to authenticate your user.
+## Authenticate
+Every meaningful interaction with the Vault API requires authentication. You can authenticate through the `/auth` endpoint.
+
+The auth endpoint accepts your username and password and returns a `sessionId` token that you must include on all further calls to the API.
+
+```ts
+// Never hardcode credentials in a production environment.
+// Store your username and password in a .env file and import it into your 
+// application using the process.env value.
+const { USER_NAME, PASSWORD, API_VERSION, DNS_DOMAIN } = process.env; 
+
+console.log(USER_NAME, PASSWORD, API_VERSION, DNS_DOMAIN);
+
+
+const response = await fetch(`https://${DNS_DOMAIN}/api/${API_VERSION}/auth`, {
+	method: 'POST',
+	headers: {
+		'Content-Type': 'application/x-www-form-urlencoded',
+		'Accept': 'application/json'
+	},
+	body: new URLSearchParams({
+		username: USER_NAME ?? '',
+		password: PASSWORD ?? ''
+	}).toString()
+});
+
+// Get the sessionId from the response
+const data = await response.json();
+const sessionId = data.sessionId;
+
+console.log(sessionId);
+```
+For this tutorial, we will log the Session ID to the console and manually add it to code samples in the following steps. 
+
+In a real application, you will want to keep the Session ID in memory and pass it to other functions when calling the API. 
+
+> For more information on authentication, see the [Authentication docs](https://developer.veevavault.com/docs/) and [Authentication reference](https://developer.veevavault.com/api/24.2/#authentication).
+
+
 </Step>
  
 <Step>
  
-### Learn about vObjects
+## Create employees
+After you've authenticated, you can create vault objects in the API. While you can create vault objects by passing individual pieces of data in an API call, it is more convenient to create new objects as batches by passing .csv files in your API calls.
+
+The following API call to the `/vobjects/employee__c` endpoint will create vault objects corresponding to each of the entries in the employees.csv file.
+
+```ts
+const { API_VERSION, DNS_DOMAIN } = process.env;
+const sessionId = ''; // Add your sessionId here
+
+
+const myHeaders = new Headers();
+myHeaders.append("Authorization", sessionId);
+myHeaders.append("Content-Type", "text/csv");
+myHeaders.append("Accept", "application/json");
+
+const file = await Bun.file("employee.csv").text(); // Or use node fs.readFileSync("employee.csv", "utf8")
+
+const requestOptions = {
+  method: "POST",
+  headers: myHeaders,
+  body: file,
+  redirect: "follow"
+};
+
+const response = await fetch(`https://${DNS_DOMAIN}/api/${API_VERSION}/vobjects/employee__c`, requestOptions)
+const result = await response.json()
+console.log(result)
+```
 
  
 </Step>
 
 <Step>
 
-### Create Employees using CSV
+## Create addresses
+Vault Objects are flexible and track associations between objects defined in their schema automatically. For example, when we import the address objects contained in the addresses.csv file, Vault will automatically associate them with their related users in the system by way of the `employee__c.name__v` field.
+
+The following call to the `/vobjects/address__c` endpoint will create vault objects for each of the addresses in the addresses.csv file.
+
+```ts
+const { API_VERSION, DNS_DOMAIN } = process.env;
+const sessionId = ''; // Add your sessionId here
+
+const myHeaders = new Headers();
+myHeaders.append("Authorization", sessionId);
+myHeaders.append("Content-Type", "text/csv");
+myHeaders.append("Accept", "application/json");
+
+const file = await Bun.file("address.csv").text(); // Or use node fs.readFileSync("employee.csv", "utf8")
+
+const requestOptions = {
+  method: "POST",
+  headers: myHeaders,
+  body: file,
+  redirect: "follow"
+};
+
+const response = await fetch(`https://${DNS_DOMAIN}/api/${API_VERSION}/vobjects/address__c`, requestOptions)
+const result = await response.json()
+console.log(result)
+```
 
 
 </Step>
+
+<Step>
+
+## Find a specific `employee__c` object ID
+You need to pass the onboarding API the id field for the `employee__c` object you want to mark as onboarded. However, the purpose of the onboarding API is to respond to tasks being completed by external systems which may not include the id property for the `employee_c` object you need to onboard. While you can use a heavy-weight approach like maintaining a database table outside of either of these systems that keeps track of an employee's identifiers across multiple systems, a lighter-weight approach can be to use the Vault APIs query endpoint to search `employee__c` objects by user name and use the id field delivered by that search.
+
+We can use the following [Vault Query Language (VQL)](https://developer.veevavault.com/vql/).  String to query for the `employee__c` object associated with Dwight Schrute and get the employee id from it. Then, we can use the employee ID to onboard Dwight.
+
+```sql
+SELECT id
+FROM employee__c
+WHERE name__v = 'Dwight Schrute'
+```
+
+Which can be passed in the call to the `/query` endpoint.
+
+```ts
+const { API_VERSION, DNS_DOMAIN } = process.env;
+const sessionId = 'A2A45E3BA1B53F2536A235FEA904D7615EDE3A6206C31D65AB10B7615D684F87D2B4B51899757044D35365F730E60E070D82E15F874867478223961A9050881F';
+const queryString = "SELECT id FROM employee__c WHERE name__v = 'Dwight Schrute'";
+
+const myHeaders = new Headers();
+myHeaders.append("Authorization", sessionId);
+myHeaders.append("Accept", "application/json");
+myHeaders.append("X-VaultAPI-DescribeQuery", "true");
+myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
+
+const urlencoded = new URLSearchParams();
+urlencoded.append("q", queryString);
+
+const requestOptions = {
+  method: "POST",
+  headers: myHeaders,
+  body: urlencoded,
+  redirect: "follow"
+};
+
+const response = await fetch(`https://${DNS_DOMAIN}/api/${API_VERSION}/query`, requestOptions);
+
+const data = await response.json();
+const id = data.id;
+console.log(id);
+
+```
+
+> Refer to the [Vault Query Language (VQL)](https://developer.veevavault.com/vql/) guide for more information on this extensive topic. 
+
+</Step>
+
+<Step>
+
+## Onboard employees
+Now that we have a set of employee and address objects imported into Vault and an `employee__c` id value, we can onboard the employee with a simple call to the `/custom/employee_onboarding` endpoint.
+
+```ts
+// Import the environment variables USER_NAME, PASSWORD, API_VERSION, DNS_DOMAIN
+const { API_VERSION, DNS_DOMAIN } = process.env;
+const sessionId = ''; // Add your sessionId here
+const employeeId = ''; // Add the employeeId you want to onboard here
+
+const myHeaders = new Headers();
+myHeaders.append("Authorization", sessionId);
+myHeaders.append("Accept", "application/json");
+
+const formData = new FormData();
+formData.append("employee_id", employeeId);
+formData.append("onboarding_date", "2024-11-05");
+
+const requestOptions = {
+    method: 'POST',
+    headers: myHeaders,
+    body: formData,
+    redirect: 'follow'
+};
+
+const response = await fetch(`https://${DNS_DOMAIN}/api/${API_VERSION}/custom/employee_onboarding`, requestOptions);
+const result = await response.text()
+console.log(result)
+```
+
+
+
+</Step>
+
 </Steps>
