Removing irrelevant end section.

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -216,7 +216,5 @@ You've now successfully:
 - Located a specific employee using VQL
 - Onboarded an employee using the Onboarding API
 
-This guide covered the basics of employee onboarding, but the Vault API offers many more capabilities. For complete details about available endpoints, parameters, and response formats, check out our [API Reference for employee onboarding](/onboard-employee) or explore these related topics:
-
-Need help? Join our [Developer Community](https://developer.veevavault.com/community) or contact [Vault Support](https://support.veevavault.com).
+This guide covered the basics of employee onboarding, but the Vault API offers many more capabilities. For complete details about available endpoints, parameters, and response formats, check out our [API Reference for employee onboarding](/onboard-employee).
 
