--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Onboarding New Employees
+title: How to Onboard New Employees
 description: How to onboard new employees using the Veeva Vault API.
 ---
 import { Step, Steps } from 'fumadocs-ui/components/steps';
