Updating API reference with link.

--- a/content/docs/onboard-employee.mdx
+++ b/content/docs/onboard-employee.mdx
@@ -1,6 +1,8 @@
 ---
-title: Onboard Employee
-description: Updates the onboarding status for a specified employee
+title: Process employee onboarding
+description: >-
+  Updates the onboarding status for a specified employee. See the [Onboard
+  Employee](/docs) page for more information.
 full: true
 _openapi:
   method: POST
@@ -9,7 +11,9 @@ _openapi:
   structuredData:
     headings: []
     contents:
-      - content: Updates the onboarding status for a specified employee
+      - content: >-
+          Updates the onboarding status for a specified employee. See the
+          [Onboard Employee](/docs) page for more information.
 ---
 
 <APIPage document={"./onboardingApi.yaml"} operations={[{"path":"/custom/employee_onboarding","method":"post"}]} hasHead={false} />
