Small typo fixes.

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -13,7 +13,7 @@ This guide will walk you through using the Onboarding API in Veeva Vault. In ord
 3. Have a basic understanding of [Vault objects](https://platform.veevavault.help/en/lr/15298/).
 4. Have a username, password, and Vault DNS.
 
-### Example Data
+### Example data
 This guide will make use of example data provided through the following .csv files.
 - [employee.csv](/employee.csv)
 - [address.csv](/address.csv)
@@ -209,7 +209,7 @@ console.log(result)
 
 </Steps>
 
-## Next Steps
+## Next steps
 You've now successfully:
 - Authenticated with the Vault API
 - Created employee and address objects from CSV data
