Minor typo fix.

--- a/content/docs/onboard-employee.mdx
+++ b/content/docs/onboard-employee.mdx
@@ -13,7 +13,7 @@ _openapi:
     contents:
       - content: >-
           Updates the onboarding status for a specified employee. See the
-          [Onboard Employee](/docs) page for more information.
+          How to Onboard an Employee page for a detailed guide.
 ---
 
 <APIPage document={"./onboardingApi.yaml"} operations={[{"path":"/custom/employee_onboarding","method":"post"}]} hasHead={false} />
